feat: 멤버 권한 관리 가이드 수정

--- a/essentials/member-permission.mdx
+++ b/essentials/member-permission.mdx
@@ -1,8 +1,7 @@
 ---
 title: "멤버 권한 관리"
-description: "mile에서의 구성원 권한을 설정하는 방법을 알려드립니다!"
+description: "마일에서 구성원 권한을 설정하는 방법을 알려드립니다!"
 ---
-
 ---
 
 <Warning>멤버 권한 관리 페이지는 권한 별로 제공하는 기능이 달라집니다. </Warning>
@@ -11,13 +10,66 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 마일 서비스는 23년 12월 기준으로 구글 워크스페이스 계정 상의 최고 권한 관리자의 최초 1회 회원가입 시, 다른 임직원 분들도 회원가입 절차 없이 구글 계정 그대로 이용가능합니다.
 
-**권한 별로 해당 마일에서 제공하는 기능은 다음과 같습니다.**
+**마일의 권한은 총 5가지의 권한으로 나뉘어져 있습니다.**
 
--   **최고 관리자**: 최고 관리자를 제외한 구성원의 관리자 및 일반 권한을 수정할 수 있습니다. 마일에서 제공하는 모든 설정에 접근이 가능합니다.
--   **관리자**: 구성원의 권한을 조회할 수 있습니다. 구글 및 슬랙과 같은 서비스 연동을 제외한 모든 설정에 접근이 가능합니다.
--   **일반**: 모든 설정에 대해서 접근이 불가능합니다. 개인 프로필 설정 및 Mile Visitors를 사용하시면, **나의 방문자 관리** 페이지 사용이 가능합니다.
+- **Owner**
+    1. owner 역할은 소유자로 워크스페이스 내 한 명만 존재합니다.
+    2. 최초 회원가입 및 Google Workspace를 연동한 계정이 자동으로 owner 권한을 가집니다.
+    
+- **Super Admin**
+    1. Mile 서비스 내 총괄 관리자로 기업 정보 변경, 메신저 연동, 멤버 설정(역할 및 동기화) 등 workspace 내 기본설정이 가능합니다.
+    2. policy admin(정책 관리자)과 security admin(보안 관리자), staff(임직원)의 모든 권한을 가집니다.
+    3. Google Workspace 내 최고권한관리자 역할은 자동으로 super admin 역할로 부여됩니다.
+
+- **Policy Admin**
+    1. Mile 서비스 내 정책을 관리할 수 있는 역할입니다.
+    2. Mile Meeting 제품에서는 체크인/체크아웃 기능, 회의 종료 안내, 민원 관리 등 기능별 설정이 가능합니다.
+    3. Mile Visitors 제품에서는 방문 목적 관리, 안내 메시지 관리, 기기 관리 등 설정이 가능합니다.
+
+- **Security Admin**
+    1. Mile analytics에서 회사 전체의 데이터를 조회하고 관리하는 역할입니다.
+    2. Mile Meeting에선 실제 회의 데이터, 임직원 관계망 데이터 등을 조회할 수 있습니다.
+    3. Mile Visitors에선 회사에 출입하는 외부인원에 대한 출입 기록, 방문 목적, 연락처 등을 조회할 수 있습니다.
+
+- **Staff**
+    1. 관리자가 설정한 정책에 맞게 Mile 서비스를 이용하는 일반 임직원들에게 부여되는 역할입니다.
+    2. Mile Visitors에선 나의 방문 관리를 통해 방문을 생성, 수정, 삭제할 수 있습니다. 그 외에 개인 캘린더 연동 등 다양한 기능을 지원합니다.
+
 
 <br />
+
+| 대분류       | 중분류             | 소분류                                           | Owner | Super Admin | Policy Admin | Security Admin | Staff |
+|--------------|--------------------|--------------------------------------------------|-------|-------------|--------------|----------------|-------|
+| 공통 설정    | 기업 정보 관리     | 기업명 및 기업 로고 이미지 수정                | O     | O           | X            | X              | X     |
+|              |                    | 기기 로그인 계정 조회 및 수정                   | O     | O           | X            | X              | X     |
+|              | 멤버 권한 관리     | 멤버 목록 조회/수정/동기화                      | O     | O           | X            | X              | X     |
+|              | 서비스 연동 관리   | 회의실 캘린더 연동                              | O     | X           | X            | X              | X     |
+|              |                    | 비공개 회의 데이터 수집 및 조회                 | O     | O           | X            | X              | X     |
+|              |                    | 메신저 연동 및 해제                             | O     | O           | X            | X              | X     |
+|              | 내 정보 관리       | 프로필 이름 및 이미지 수정                      | O     | O           | O            | O              | O     |
+| Meeting      | 정책 관리          | 체크인 기능 설정                                | O     | O           | O            | X              | X     |
+|              |                    | 체크아웃 기능 설정                              | O     | O           | O            | X              | X     |
+|              |                    | 회의 종료 안내 설정                             | O     | O           | O            | X              | X     |
+|              | 회의실 민원 관리   | 회의실 민원 내역 조회 및 수정                   | O     | O           | O            | X              | X     |
+|              |                    | 회의실 민원 종류 설정                           | O     | O           | O            | X              | X     |
+|              |                    | 회의실 민원 담당자 관리                         | O     | O           | O            | X              | X     |
+| Visitors     | 나의 방문 관리     | 나의 방문 생성, 조회, 수정, 삭제                | O     | O           | O            | O              | O     |
+|              |                    | 나의 방문 요청 승인, 거절                       | O     | O           | O            | O              | O     |
+|              | 서비스 커스터마이징| 사전 방문 관리(사전 방문 목적 설정)            | O     | O           | O            | X              | X     |
+|              |                    | 방문 안내 메시지 관리                           | O     | O           | O            | X              | X     |
+|              |                    | 체크인/체크아웃 정책 관리                       | O     | O           | O            | X              | X     |
+|              | 기기 관리          | 기기별 정보 설정 (이름, 색상, 인삿말, 안내메시지)| O     | O           | O            | X              | X     |
+|              |                    | 초인종 기능 설정 (활성화 여부, 담당자)           | O     | O           | O            | X              | X     |
+|              |                    | 당일 방문 기능 설정 (방문 목적, 수집정보, 담당자)| O     | O           | O            | X              | X     |
+| Analytics    | Mile Visitors      | 방문자 현황 대시보드 조회                       | O     | O           | X            | O              | X     |
+|              |                    | 방문자 관리 데이터 조회                         | O     | O           | X            | O              | X     |
+|              | Mile Meeting       | 회의실 현황 대시보드 조회                       | O     | O           | X            | O              | X     |
+|              |                    | 회의실 이용 현황 데이터 조회                    | O     | O           | X            | O              | X     |
+|              |                    | 임직원 관계망 데이터 조회                       | O     | O           | X            | O              | X     |
+
+
+<br />
+
 ## 2. 멤버 권한 관리 페이지 접속하기
 
 멤버 권한 관리 페이지는 `설정` 탭의 `멤버 권한 관리` 를 선택하시면 접속하실 수 있습니다.
@@ -38,7 +90,7 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 ## 3. 멤버 조회하기
 
-멤버를 조회하는데 있어서 각각의 필터에서 **슬랙 연동 유무와 역할(권한)을 필터링**해서 조회를 해볼 수 있습니다.
+멤버를 조회하는데 있어서 각각의 필터에서 **메신저 연동 유무와 역할(권한)을 필터링**해서 조회해볼 수 있습니다.
 
 <Frame>
     <img src="/images/essentials/member-permission/img2.png" />
@@ -46,7 +98,7 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 <br />
 
-해당 필터를 설정하면, 표 상단에 어떤 필터가 걸렸는지에 대한 정보와 함께 데이터가 나타납니다.
+해당 필터를 설정하면, 표 상단에 어떤 필터가 걸렸는지에 대한 정보와 함께 필터링된 데이터가 조회됩니다.
 
 <Frame>
     <img src="/images/essentials/member-permission/img3.png" />
@@ -58,7 +110,10 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 `역할` 컬럼에서 최고 관리자가 아닌 다른 구성원들의 역할을 수정할 수 있습니다.
 
-선택을 제공하는 권한은 `관리자, 일반` 이며, 최고 관리자의 역할은 수정할 수 없습니다.
+원하는 임직원의 권한을 `Super Admin`, `Policy Admin`, `Security Admin`, `Staff`로 수정할 수 있으며, `Owner` 권한은 부여할 수 없습니다.
+<Warning>
+    `Owner`, `Super Admin` 계정으로만 멤버 권한 수정이 가능합니다.
+</Warning>
 
 <Frame>
     <img src="/images/essentials/member-permission/img4.png" />
@@ -67,7 +122,8 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 <br />
 ## 5. 멤버 동기화하기
 
-신규 입사와 같이 기존 멤버 목록에 변동이 있을 때 해당 멤버 동기화 버튼을 눌러주시면, 마일 서비스에 반영됩니다.
+신규 입사 혹은 퇴사와 같이 기존 멤버 목록에 변동이 있을 때 `멤버 목록 동기화` 버튼을 눌러주시면, 마일 서비스에 최신 멤버 목록이 반영됩니다.
+<Note>구글 워크스페이스의 멤버 목록을 불러와 동기화하는 작업입니다.</Note>
 
 <Frame>
     <img src="/images/essentials/member-permission/img5.png" />
