--- a/notice/notice.mdx
+++ b/notice/notice.mdx
@@ -3,6 +3,7 @@ title: "마일 소식"
 description: "공지사항"
 ---
 
+<Card title="[24.10.25] 개인정보 처리방침 업데이트" href="https://policy.mile.im/privacy/2024.10.25.html" />
 <Card title="[24.06.19] 개인정보 처리방침 업데이트" href="https://policy.mile.im/privacy/2024.06.19.html" />
 <Card title="[24.03.04] 개인정보 처리방침 업데이트" href="https://policy.mile.im/privacy/2024.03.04.html" />
 <Card title="[24.02.06] 개인정보 처리방침 업데이트" href="https://policy.mile.im/privacy/2024.02.06.html" />
